# CodTech-task-1

./: CMakeLists.txt  README.md
include/: main.h
src/: appendFile.c  createFile.c  main.c  readFile.c  writeFile.c
